--- a/NOVA/Views/IK/PersonelBilgiYonetim.cshtml
+++ b/NOVA/Views/IK/PersonelBilgiYonetim.cshtml
@@ -16,6 +16,16 @@
         .no-records-found {
             display:none;
         }
+        .th-inner {
+            padding: 0.75rem;
+            vertical-align: bottom;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: normal !important;
+        }
+        .td{
+            white-space:nowrap !important;
+        }
     </style>
 </head>
 <body onclose="close()">
@@ -500,7 +510,7 @@
 
                                         <div class="col-2">
                                             <label for="firstName" class="form-label">Personel Kimlik Numarası</label>
-                                            <input class="form-control duzenle" type="text" value=@ViewBag.Personel.USER_ID id="USER_ID" name="USER_ID" readonly>
+                                            <input class="form-control duzenle" type="text" value="@ViewBag.Personel.USER_ID" id="USER_ID" name="USER_ID" readonly>
                                         </div>
 
 
@@ -509,13 +519,13 @@
                                         <div class="col">
 
                                             <label for="firstName" class="form-label">İsim</label>
-                                            <input class="form-control duzenle" type="text" value=@ViewBag.Personel.ISIM id="ISIM" name="ISIM">
+                                            <input class="form-control duzenle" type="text" value="@ViewBag.Personel.ISIM" id="ISIM" name="ISIM">
 
                                         </div>
                                         <div class="col">
 
                                             <label for="firstName" class="form-label">Soyisim</label>
-                                            <input class="form-control duzenle" type="text" id="SOYISIM" name="SOYISIM" value=@ViewBag.Personel.SOYISIM>
+                                            <input class="form-control duzenle" type="text" id="SOYISIM" name="SOYISIM" value="@ViewBag.Personel.SOYISIM">
 
 
                                         </div>
@@ -526,7 +536,7 @@
                                             <label for="firstName" class="form-label">TC KİMLİK NUMARASI</label>
                                             @if (ViewBag.Personel.TCKN != null)
                                             {
-                                                <input class="form-control duzenle" type="text" id="TCKN" name="TCKN" value=@ViewBag.Personel.TCKN oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');" maxlength="11">
+                                                <input class="form-control duzenle" type="text" id="TCKN" name="TCKN" value="@ViewBag.Personel.TCKN" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');" maxlength="11">
 
                                             }
                                             else
@@ -5989,45 +5999,46 @@
                    data-url="http://192.168.2.13:83/api/personel">
                 <thead>
                     <tr>
-                        <th data-field="ISIM" data-sortable="true">ISIM</th>
-                        <th data-field="SOYISIM" data-sortable="true">SOYISIM</th>
-                        <th data-field="SUBE" data-sortable="true">ŞUBE</th>
-                        <th data-field="CINSIYET" data-sortable="true">CİNSİYET</th>
-                        <th data-field="TCKN" data-sortable="true">TCKN</th>
-                        <th data-field="DOGUM_TARIHI" data-sortable="true" data-formatter="tarihFormatter">DOGUM TARIHI</th>
-                        <th data-field="DOGUM_YERI_IL" data-sortable="true" data-visible="false">DOGUM YERI IL</th>
-                        <th data-field="DOGUM_YERI_ILCE" data-sortable="true" data-visible="false">DOGUM YERI ILCE</th>
-                        <th data-field="OGRENIM_DURUMU" data-sortable="true" data-visible="false">OGRENIM DURUMU</th>
-                        <th data-field="MEZUN_OKUL" data-sortable="true" data-visible="false">MEZUN OKUL</th>
-                        <th data-field="MEZUN_BOLUM" data-sortable="true" data-visible="false">MEZUN BOLUM</th>
-                        <th data-field="MEZUN_YIL" data-sortable="true" data-visible="false">MEZUN YIL</th>
-                        <th data-field="IKAMETGAH_ADRES" data-sortable="true" data-visible="false">IKAMETGAH ADRES</th>
-                        <th data-field="IKAMETGAH_IL" data-sortable="true" data-visible="false">IKAMETGAH IL</th>
-                        <th data-field="IKAMETGAH_ILCE" data-sortable="true" data-visible="false">IKAMETGAH ILCE</th>
-                        <th data-field="MEDENI_HAL" data-sortable="true" data-visible="false">MEDENI HAL</th>
-                        <th data-field="ES_CALISMA_DURUMU" data-sortable="true" data-visible="false">ES CALISMA DURUMU</th>
-                        <th data-field="ES_CALISMA_FIRMA" data-sortable="true" data-visible="false">ES CALISMA FIRMA</th>
-                        <th data-field="ES_UNVANI" data-sortable="true" data-visible="false">ES UNVANI</th>
-                        <th data-field="COCUK_SAYI" data-sortable="true" data-visible="false">COCUK SAYI</th>
-                        <th data-field="IKAMET_EV_DURUM" data-sortable="true" data-visible="false">IKAMET EV DURUM</th>
-                        <th data-field="ARAC_DURUM" data-sortable="true" data-visible="false">ARAC DURUM</th>
-                        <th data-field="ARAC_PLAKA" data-sortable="true" data-visible="false">ARAC PLAKA</th>
-                        <th data-field="EHLIYET_VAR" data-sortable="true" data-visible="false">EHLIYET VAR</th>
-                        <th data-field="EHLIYET_SINIF" data-sortable="true" data-visible="false">EHLIYET SINIF</th>
-                        <th data-field="MEVCUT_IS_ILK_TARIH" data-sortable="true" data-formatter="tarihFormatter">EFECE'DE İŞE BAŞLAMA TARİHİ</th>
-                        <th data-field="ILETISIM_BILGI_MAIL" data-sortable="true" data-visible="false">ILETISIM BILGI MAIL</th>
-                        <th data-field="ACIL_DURUM_KISI" data-sortable="true" data-visible="false">ACIL DURUM KISI</th>
-                        <th data-field="ACIL_DURUM_KISI_ILETISIM" data-sortable="true" data-visible="false">ACIL DURUM KISI ILETISIM</th>
-                        <th data-field="ILETISIM_BILGI_TEL" data-sortable="true">ILETISIM BILGI TEL</th>
-                        <th data-field="COVID_ASI_DURUM" data-sortable="true" data-visible="false">COVID ASI DURUM</th>
-                        <th data-field="VARSA_SUREKLI_KULL_ILAC" data-sortable="true" data-visible="false">VARSA SUREKLI KULL ILAC</th>
-                        <th data-field="VARSA_ENGEL_DURUM" data-sortable="true" data-visible="false">VARSA ENGEL DURUM</th>
-                        <th data-field="VARSA_SUREKLI_HAST" data-sortable="true" data-visible="false">VARSA SUREKLI HAST</th>
-                        <th data-field="KAN_GRUP" data-sortable="true" data-visible="false">KAN GRUP</th>
-                        <th data-field="ILK_IS_TARIH" data-sortable="true" data-formatter="tarihFormatter" data-visible="false">ILK IS TARIH</th>
-                        <th data-field="GOREV" data-sortable="true" data-visible="false">GOREV</th>
-                        <th data-field="CALISILAN_BIRIM" data-sortable="true">CALISILAN BIRIM</th>
-                        <th data-field="IS_CIKIS_TARIH" data-sortable="true" data-formatter="tarihFormatter" data-visible="false">IS CIKIS TARIH</th>
+                        <th data-align="center" data-field="USER_ID" data-visible="false" data-sortable="true">PERSONEL KİMLİK NO</th>
+                        <th data-align="center" data-field="ISIM" data-sortable="true">ISIM</th>
+                        <th data-align="center" data-field="SOYISIM" data-wrap="false" data-sortable="true">SOYISIM</th>
+                        <th data-align="center" data-field="SUBE" data-wrap="false" data-sortable="true">ŞUBE</th>
+                        <th data-align="center" data-field="CINSIYET" data-sortable="true">CİNSİYET</th>
+                        <th data-align="center" data-field="TCKN" data-sortable="true">TCKN</th>
+                        <th data-align="center" data-field="DOGUM_TARIHI" data-sortable="true" data-formatter="tarihFormatter">DOGUM TARIHI</th>
+                        <th data-align="center" data-field="DOGUM_YERI_IL" data-sortable="true" data-visible="false">DOGUM YERI IL</th>
+                        <th data-align="center" data-field="DOGUM_YERI_ILCE" data-sortable="true" data-visible="false">DOGUM YERI ILCE</th>
+                        <th data-align="center" data-field="OGRENIM_DURUMU" data-sortable="true" data-visible="false">OGRENIM DURUMU</th>
+                        <th data-align="center" data-field="MEZUN_OKUL" data-sortable="true" data-visible="false">MEZUN OKUL</th>
+                        <th data-align="center" data-field="MEZUN_BOLUM" data-sortable="true" data-visible="false">MEZUN BOLUM</th>
+                        <th data-align="center" data-field="MEZUN_YIL" data-sortable="true" data-visible="false">MEZUN YIL</th>
+                        <th data-align="center" data-field="IKAMETGAH_ADRES" data-sortable="true" data-visible="false">IKAMETGAH ADRES</th>
+                        <th data-align="center" data-field="IKAMETGAH_IL" data-sortable="true" data-visible="false">IKAMETGAH IL</th>
+                        <th data-align="center" data-field="IKAMETGAH_ILCE" data-sortable="true" data-visible="false">IKAMETGAH ILCE</th>
+                        <th data-align="center" data-field="MEDENI_HAL" data-sortable="true" data-visible="false">MEDENI HAL</th>
+                        <th data-align="center" data-field="ES_CALISMA_DURUMU" data-sortable="true" data-visible="false">ES CALISMA DURUMU</th>
+                        <th data-align="center" data-field="ES_CALISMA_FIRMA" data-sortable="true" data-visible="false">ES CALISMA FIRMA</th>
+                        <th data-align="center" data-field="ES_UNVANI" data-sortable="true" data-visible="false">ES UNVANI</th>
+                        <th data-align="center" data-field="COCUK_SAYI" data-sortable="true" data-visible="false">COCUK SAYI</th>
+                        <th data-align="center" data-field="IKAMET_EV_DURUM" data-sortable="true" data-visible="false">IKAMET EV DURUM</th>
+                        <th data-align="center" data-field="ARAC_DURUM" data-sortable="true" data-visible="false">ARAC DURUM</th>
+                        <th data-align="center" data-field="ARAC_PLAKA" data-sortable="true" data-visible="false">ARAC PLAKA</th>
+                        <th data-align="center" data-field="EHLIYET_VAR" data-sortable="true" data-visible="false">EHLIYET VAR</th>
+                        <th data-align="center" data-field="EHLIYET_SINIF" data-sortable="true" data-visible="false">EHLIYET SINIF</th>
+                        <th data-align="center" data-field="MEVCUT_IS_ILK_TARIH" data-sortable="true" data-formatter="tarihFormatter">EFECE'DE İŞE BAŞLAMA TARİHİ</th>
+                        <th data-align="center" data-field="ILETISIM_BILGI_MAIL" data-sortable="true" data-visible="false">ILETISIM BILGI MAIL</th>
+                        <th data-align="center" data-field="ACIL_DURUM_KISI" data-sortable="true" data-visible="false">ACIL DURUM KISI</th>
+                        <th data-align="center" data-field="ACIL_DURUM_KISI_ILETISIM" data-sortable="true" data-visible="false">ACIL DURUM KISI ILETISIM</th>
+                        <th data-align="center" data-field="ILETISIM_BILGI_TEL" data-sortable="true">ILETISIM BILGI TEL</th>
+                        <th data-align="center" data-field="COVID_ASI_DURUM" data-sortable="true" data-visible="false">COVID ASI DURUM</th>
+                        <th data-align="center" data-field="VARSA_SUREKLI_KULL_ILAC" data-sortable="true" data-visible="false">VARSA SUREKLI KULL ILAC</th>
+                        <th data-align="center" data-field="VARSA_ENGEL_DURUM" data-sortable="true" data-visible="false">VARSA ENGEL DURUM</th>
+                        <th data-align="center" data-field="VARSA_SUREKLI_HAST" data-sortable="true" data-visible="false">VARSA SUREKLI HAST</th>
+                        <th data-align="center" data-field="KAN_GRUP" data-sortable="true" data-visible="false">KAN GRUP</th>
+                        <th data-align="center" data-field="ILK_IS_TARIH" data-sortable="true" data-formatter="tarihFormatter" data-visible="false">ILK IS TARIH</th>
+                        <th data-align="center" data-field="GOREV" data-sortable="true" data-visible="false">GOREV</th>
+                        <th data-align="center" data-field="CALISILAN_BIRIM" data-sortable="true">CALISILAN BIRIM</th>
+                        <th data-align="center" data-field="IS_CIKIS_TARIH" data-sortable="true" data-formatter="tarihFormatter" data-visible="false">IS CIKIS TARIH</th>
                     </tr>
                 </thead>
             </table>
