--- a/NOVA/Views/IK/PersonelSubeYonetim.cshtml
+++ b/NOVA/Views/IK/PersonelSubeYonetim.cshtml
@@ -3306,7 +3306,7 @@
 
                                         <div class="col-2">
                                             <label for="firstName" class="form-label">Personel Kimlik Numarası</label>
-                                            <input class="form-control duzenle" type="text" value=@ViewBag.Personel.USER_ID id="USER_ID" name="USER_ID" readonly>
+                                            <input class="form-control duzenle" type="text" value="@ViewBag.Personel.USER_ID" id="USER_ID" name="USER_ID" readonly>
                                         </div>
 
 
@@ -3315,7 +3315,7 @@
                                         <div class="col">
 
                                             <label for="firstName" class="form-label">İsim</label>
-                                            <input class="form-control duzenle" type="text" value=@ViewBag.Personel.ISIM id="ISIM" name="ISIM" disabled>
+                                            <input class="form-control duzenle" type="text" value="@ViewBag.Personel.ISIM" id="ISIM" name="ISIM" disabled>
 
                                         </div>
                                         <div class="col">
