--- a/NOVA/Views/Satis/Index.cshtml
+++ b/NOVA/Views/Satis/Index.cshtml
@@ -79,9 +79,9 @@
         .menu1 {
             display: inline-flex;
         }
-        /* .btn-group {
+         .menu2 {
             display: none;
-        }*/
+        }
     }
 </style>
 
@@ -91,6 +91,11 @@
         <div class="card" style="font-size:14px;letter-spacing:1px">
 
             <div class="card-header pb-0">
+                <div class="layout-menu-toggle navbar-nav align-items-xl-center me-3 me-xl-0 d-xl-none">
+                    <a class="nav-item nav-link px-0 me-xl-4" href="javascript:void(0)">
+                        <i class="bx bx-menu bx-sm"></i>
+                    </a>
+                </div>
                 <div class="btn-group menu1">
                     <button type="button" class="btn btn-primary btn-icon rounded-pill dropdown-toggle hide-arrow" data-bs-toggle="dropdown" aria-expanded="false">
                         <i class="bx bx-dots-vertical-rounded"></i>
@@ -106,13 +111,14 @@
                     </ul>
                 </div>
 
-                <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
+                <div class="btn-group menu2" role="group" aria-label="Basic radio toggle button group">
                     <input type="radio" class="btn-check" onclick="change(1)" name="btnradio" id="btnradio1" checked="" autocomplete="off">
                     <label class="btn btn-outline-secondary" for="btnradio1">Standart</label>
                     <input type="radio" class="btn-check" onclick="change(2)" name="btnradio" id="btnradio2" autocomplete="off">
                     <label class="btn btn-outline-secondary" for="btnradio2">Detaylı</label>
 
                 </div>
+
                 <div class="avatar avatar-online float-end mb-0" data-bs-toggle="dropdown">
                     @{
                         string s = Request.Cookies["Id"].Value + ".png?" + DateTime.Now.Ticks.ToString();
