--- a/NOVA/Views/Sevkiyat/SiparisRaporu.cshtml
+++ b/NOVA/Views/Sevkiyat/SiparisRaporu.cshtml
@@ -72,6 +72,12 @@
 
 
     @@media screen and (max-width: 600px) {
+        input {
+            width: 100% !important;
+        }
+        .select2{
+            width:100% !important;
+        }
         .menu1 {
             display: inline-flex;
         }
@@ -126,50 +132,64 @@
 
     <div class="card mx-auto" style="font-size:12px">
         <div class="card-header pb-0">
-            <div class="avatar avatar-online float-end mb-0" data-bs-toggle="dropdown">
-                @{
-                    string s = Request.Cookies["Id"].Value + ".png?" + DateTime.Now.Ticks.ToString();
-                }
-                <object data="/assets/img/avatars/@s" type="image/png" class="w-px-40 h-auto rounded-circle">
-                    <img src="/assets/img/avatars/7.png" class="w-px-40 h-auto rounded-circle">
-                </object>
-            </div>
-            <ul class="dropdown-menu dropdown-menu-end">
-                <li>
-                    <a class="dropdown-item" href='@Url.Action("Index","Profil")'>
-                        <div class="d-flex">
-                            <div class="flex-shrink-0 me-3">
-                                <div class="avatar avatar-online">
-                                    <object data="/assets/img/avatars/@s" type="image/png" class="w-px-40 h-auto rounded-circle">
-                                        <img src="/assets/img/avatars/7.png" class="w-px-40 h-auto rounded-circle">
-                                    </object>
+            <div class="row">
+                <div class="col">
+                    <div class="layout-menu-toggle navbar-nav align-items-xl-center me-3 me-xl-0 d-xl-none">
+                        <a class="nav-item nav-link" href="javascript:void(0)">
+                            <i class="bx bx-menu bx-sm"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="avatar avatar-online float-end mb-0" data-bs-toggle="dropdown">
+                        @{
+                            string s = Request.Cookies["Id"].Value + ".png?" + DateTime.Now.Ticks.ToString();
+                        }
+                        <object data="/assets/img/avatars/@s" type="image/png" class="w-px-40 h-auto rounded-circle">
+                            <img src="/assets/img/avatars/7.png" class="w-px-40 h-auto rounded-circle">
+                        </object>
+                    </div>
+                    <ul class="dropdown-menu dropdown-menu-end">
+                        <li>
+                            <a class="dropdown-item" href='@Url.Action("Index","Profil")'>
+                                <div class="d-flex">
+                                    <div class="flex-shrink-0 me-3">
+                                        <div class="avatar avatar-online">
+                                            <object data="/assets/img/avatars/@s" type="image/png" class="w-px-40 h-auto rounded-circle">
+                                                <img src="/assets/img/avatars/7.png" class="w-px-40 h-auto rounded-circle">
+                                            </object>
+                                        </div>
+                                    </div>
+                                    <div class="flex-grow-1">
+                                        @if (@Request.Cookies["Name"] != null)
+                                        {
+                                            <span class="fw-semibold d-block">@Request.Cookies["Name"].Value</span>
+                                            <small class="text-muted">Yetki: @Request.Cookies["RoleName"].Value</small>
+                                        }
+                                        else
+                                        {
+                                            <span class="fw-semibold d-block">Test</span>
+                                            <small class="text-muted">Yetki: Test</small>
+                                        }
+
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="flex-grow-1">
-                                @if (@Request.Cookies["Name"] != null)
-                                {
-                                    <span class="fw-semibold d-block">@Request.Cookies["Name"].Value</span>
-                                    <small class="text-muted">Yetki: @Request.Cookies["RoleName"].Value</small>
-                                }
-                                else
-                                {
-                                    <span class="fw-semibold d-block">Test</span>
-                                    <small class="text-muted">Yetki: Test</small>
-                                }
+                            </a>
+                        </li>
 
-                            </div>
-                        </div>
-                    </a>
-                </li>
-
-                <li>
-                    <a href="javascript:void(0);" class="dropdown-item" data-bs-toggle="modal"
-                       data-bs-target="#cikis">
-                        <i class="bx bx-power-off me-2"></i>
-                        <span class="align-middle">Oturumu Kapat</span>
-                    </a>
-                </li>
-            </ul>
+                        <li>
+                            <a href="javascript:void(0);" class="dropdown-item" data-bs-toggle="modal"
+                               data-bs-target="#cikis">
+                                <i class="bx bx-power-off me-2"></i>
+                                <span class="align-middle">Oturumu Kapat</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+           
+            
+           
         </div>
 
 
@@ -207,11 +227,11 @@
               
                 <div class="row mt-1" onchange="datefilter()">
 
-                    <div class="col">
+                    <div class="col-sm">
                         <label for="baslagictarihi">Başlagıç Tarihi:</label>
                         <input class="form-control" style="width: 15vw;height:32px" type="date" id="baslangictarihi" name="BASLANGIC_TARIH" value=" " placeholder="Başlangıç Tarihi">
                     </div>
-                    <div class="col">
+                    <div class="col-sm">
                         <label for="bitistarihi">Bitiş Tarihi:</label>
                         <input class="form-control" style="width: 15vw;height:32px" type="date" id="bitistarihi" name="BASLANGIC_TARIH" value=" " placeholder="Bitiş Tarihi">
                     </div>
@@ -243,8 +263,9 @@
                        data-filter-control="true"
                        data-filter-control-multiple-search="true"
                        data-loading-template="loadingTemplate"
-                       data-mobile-responsive="false"
+                       data-mobile-responsive="true"
                        data-show-footer="true"
+                       data-detail-view-by-click="true"
                        data-height="680"
                        data-detail-formatter="detailFormatter"
                        data-detail-view="true"
