--- a/NOVA/Views/Shared/_Layout _yonetim_stok.cshtml
+++ b/NOVA/Views/Shared/_Layout _yonetim_stok.cshtml
@@ -47,7 +47,7 @@
         var sabit = 0;
         async function getExcelAsync() {
 
-            let response = await fetch(`http://192.168.2.13:83/api/exceltest`);
+            let response = await fetch(`http://192.168.2.13:83/api/exceltest/stok`);
             let data = await response.json()
             return data;
         }
