--- a/NOVA/Views/Shared/_Layout_anasayfa.cshtml
+++ b/NOVA/Views/Shared/_Layout_anasayfa.cshtml
@@ -12,7 +12,7 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE9">
-
+    <meta http-equiv="Content-Type" content="application/json; charset=utf-8" />
 
     <meta name="description" content="" />
 
@@ -26,12 +26,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
           rel="stylesheet" type="text/css" />
 
-   
+
 
     @Styles.Render("~/Content/test")
     @Scripts.Render("~/bundles/config")
-    
-    
+
+
     <style>
         .btn-grad {
             background-image: linear-gradient(to right, #77A1D3 0%, #79CBCA 51%, #77A1D3 100%);
@@ -75,7 +75,7 @@
                         <!-- beterbocekler.tr.gg Widget Başlangıcı --> <div class="tradingview-widget-container">
 
 
-                            <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-ticker-tape.js" async>
+                                                                           <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-ticker-tape.js" async>
   {
   "symbols": [
     {
@@ -94,7 +94,7 @@
       "proName": "BITSTAMP:BTCUSD",
       "title": "BITCOIN"
     },
-                                                                                                          {
+    {
       "proName": "NYMEX:BB1!",
       "title": "BRENT PETROL"
     }
@@ -105,7 +105,8 @@
   "displayMode": "regular",
   "locale": "tr"
 }
-                            </script>
+                                
+                                                                           </script>
                         </div> <!-- beterbocekler.tr.gg Widget sonu -->
                         <ul class="navbar-nav flex-row align-items-center ms-auto">
 
@@ -239,8 +240,8 @@
 
     <!-- Overlay -->
     <div class="layout-overlay layout-menu-toggle"></div>
-
-
+  
+    
 
 
     
