--- a/NOVA/Views/Shared/_Layout_menu.cshtml
+++ b/NOVA/Views/Shared/_Layout_menu.cshtml
@@ -37,6 +37,11 @@
                         <div data-i18n="Without menu">Stok</div>
                     </a>
                 </li>
+                <li class="menu-item" id="teklif" style="display: none">
+                    <a href="@Url.Action("Teklif", "Satis")" class="menu-link">
+                        <div data-i18n="Without menu">Teklif</div>
+                    </a>
+                </li>
                 <li class="menu-item" id="fiyatlistesi" style="font-weight:normal;display: @ViewBag.DisplayFiyatListesi">
                     <a href="@Url.Action("FiyatListesi", "Satis")" class="menu-link" id="musiliskiyon">
                         <div data-i18n="Without menu">Fiyat Listesi</div>
@@ -187,7 +192,7 @@
                         <div data-i18n="Without menu">Uygulama Ayarları</div>
                     </a>
                 </li>
-                <li class="menu-item" id="istatistik" style="display: @ViewBag.Display2">
+                <li class="menu-item" id="istatistik" style="display: @ViewBag.Istatistik">
                     <a href="@Url.Action("UygulamaIstatistik", "YonetimPaneli")" class="menu-link">
                         <div data-i18n="Without menu">Uygulama İstatistikleri</div>
                     </a>
