--- a/NOVA/Views/Satis/DetayliSiparis.cshtml
+++ b/NOVA/Views/Satis/DetayliSiparis.cshtml
@@ -126,6 +126,11 @@
 
     <div class="card mx-auto" style="font-size:12px">
         <div class="card-header pb-0">
+            <div class="layout-menu-toggle navbar-nav align-items-xl-center me-3 me-xl-0 d-xl-none">
+                <a class="nav-item nav-link px-0 me-xl-4" href="javascript:void(0)">
+                    <i class="bx bx-menu bx-sm"></i>
+                </a>
+            </div>
             <div class="avatar avatar-online float-end mb-0" data-bs-toggle="dropdown">
                 @{
                     string s = Request.Cookies["Id"].Value + ".png?" + DateTime.Now.Ticks.ToString();
