--- a/NOVA/Views/Satis/FiyatListesi.cshtml
+++ b/NOVA/Views/Satis/FiyatListesi.cshtml
@@ -62,6 +62,10 @@
         input {
             font-size: 12px !important;
         }
+        .search{
+            width:50%;
+        }
+       
     }
 
     @@media screen and (min-width: 601px) {
@@ -138,6 +142,13 @@
        
         <div class="row">
             <div class="col">
+                <div class="layout-menu-toggle navbar-nav align-items-xl-center me-3 me-xl-0 d-xl-none">
+                    <a class="nav-item nav-link px-0 me-xl-4" href="javascript:void(0)">
+                        <i class="bx bx-menu bx-sm"></i>
+                    </a>
+                </div>
+            </div>
+            <div class="col">
                 <div class="avatar avatar-online float-end mb-0" data-bs-toggle="dropdown">
                     @{
                         string s = Request.Cookies["Id"].Value + ".png?" + DateTime.Now.Ticks.ToString();
@@ -187,11 +198,12 @@
 
 
         <div id="employeeTableWrapper" class="tableWrapper">
-
+            <div id="toolbar"class="mt-2 w-100"></div>
             <table id="table"
                    class="table table-striped"
                    data-show-fullscreen="true"
                    data-toggle="table"
+                   data-toolbar="#toolbar"
                    data-show-export="true"
                    data-export-data-type="all"
                    data-export-types="['xlsx','pdf']"
@@ -287,71 +299,105 @@
         })
         function formatterToptan(value, index, row) {
             var d = sondurum.filter(x => x.FIYATKODU == index.FIYATKODU);
-            if (d[0].FIYAT2 == "YÜKSELDİ") {
-                if (index.FIYATDOVIZTIPI != "TRY") {
-                    if (value > 2) {
-                        return "<div class='row'><div class='col-6 text-end'>" + value.toLocaleString(undefined, { minimumFractionDigits: 2, maximumFractionDigits: 3 }) + "</div><div class='col-6 text-start'><i class='bx bxs-up-arrow' style='color:#00ee00'></i></div></div>";
+            if (d.length > 0) {
+                if (d[0].FIYAT2 == "YÜKSELDİ") {
+                    if (index.FIYATDOVIZTIPI != "TRY") {
+                        if (value > 2) {
+                            return "<div class='row'><div class='col-6 text-end'>" + value.toLocaleString(undefined, { minimumFractionDigits: 2, maximumFractionDigits: 3 }) + "</div><div class='col-6 text-start'><i class='bx bxs-up-arrow' style='color:#00ee00'></i></div></div>";
+                        } else {
+                            return "<div class='row'><div class='col-6 text-end'>" + value.toLocaleString(undefined, { minimumFractionDigits: 3, maximumFractionDigits: 3 }) + "</div><div class='col-6 text-start'><i class='bx bxs-up-arrow' style='color:#00ee00'></i></div></div>";
+                        }
+
                     } else {
-                        return "<div class='row'><div class='col-6 text-end'>" + value.toLocaleString(undefined, { minimumFractionDigits: 3, maximumFractionDigits: 3 }) +"</div><div class='col-6 text-start'><i class='bx bxs-up-arrow' style='color:#00ee00'></i></div></div>";
+
+                        return "<div class='row'><div class='col-6 text-end'>" + value.toLocaleString(undefined, { minimumFractionDigits: 2, maximumFractionDigits: 2 }) + "</div><div class='col-6 text-start'><i class='bx bxs-up-arrow' style='color:#00ee00'></i></div></div>";
                     }
-
-                } else {
-
-                    return "<div class='row'><div class='col-6 text-end'>" + value.toLocaleString(undefined, { minimumFractionDigits: 2, maximumFractionDigits: 2 }) + "</div><div class='col-6 text-start'><i class='bx bxs-up-arrow' style='color:#00ee00'></i></div></div>";
                 }
-            } else if (d[0].FIYAT2 == "DÜŞTÜ") {
-                if (index.FIYATDOVIZTIPI != "TRY") {
-                    if (value > 2) {
-                        return "<div class='row'><div class='col-6 text-end'>" + value.toLocaleString(undefined, { minimumFractionDigits: 2, maximumFractionDigits: 3 }) + "</div><div class='col-6 text-start'><i class='bx bxs-down-arrow' style='color:#ff0200'></i></div></div>";
+                else if (d[0].FIYAT2 == "DÜŞTÜ") {
+                    if (index.FIYATDOVIZTIPI != "TRY") {
+                        if (value > 2) {
+                            return "<div class='row'><div class='col-6 text-end'>" + value.toLocaleString(undefined, { minimumFractionDigits: 2, maximumFractionDigits: 3 }) + "</div><div class='col-6 text-start'><i class='bx bxs-down-arrow' style='color:#ff0200'></i></div></div>";
+                        } else {
+                            return "<div class='row'><div class='col-6 text-end'>" + value.toLocaleString(undefined, { minimumFractionDigits: 3, maximumFractionDigits: 3 }) + "</div><div class='col-6 text-start'><i class='bx bxs-down-arrow' style='color:#ff0200'></i></div></div>";
+                        }
+
                     } else {
-                        return "<div class='row'><div class='col-6 text-end'>" + value.toLocaleString(undefined, { minimumFractionDigits: 3, maximumFractionDigits: 3 }) + "</div><div class='col-6 text-start'><i class='bx bxs-down-arrow' style='color:#ff0200'></i></div></div>";
+
+                        return "<div class='row'><div class='col-6 text-end'>" + value.toLocaleString(undefined, { minimumFractionDigits: 2, maximumFractionDigits: 2 }) + "</div><div class='col-6 text-start'><i class='bx bxs-down-arrow' style='color:#ff0200'></i></div></div>";
                     }
+                }
+                else {
+                    if (index.FIYATDOVIZTIPI != "TRY") {
+                        if (value > 2) {
+                            return "<div class='row'><div class='col-6 text-end'>" + value.toLocaleString(undefined, { minimumFractionDigits: 2, maximumFractionDigits: 3 }) + "</div></div>";
+                        } else {
+                            return "<div class='row'><div class='col-6 text-end'>" + value.toLocaleString(undefined, { minimumFractionDigits: 3, maximumFractionDigits: 3 }) + "</div></div>";
+                        }
 
-                } else {
+                    } else {
 
-                    return "<div class='row'><div class='col-6 text-end'>" + value.toLocaleString(undefined, { minimumFractionDigits: 2, maximumFractionDigits: 2 }) + "</div><div class='col-6 text-start'><i class='bx bxs-down-arrow' style='color:#ff0200'></i></div></div>";
+                        return "<div class='row'><div class='col-6 text-end'>" + value.toLocaleString(undefined, { minimumFractionDigits: 2, maximumFractionDigits: 2 }) + "</div></div>";
+                    }
                 }
             } else {
                 if (index.FIYATDOVIZTIPI != "TRY") {
                     if (value > 2) {
-                        return "<div class='row'><div class='col-6 text-end'>" + value.toLocaleString(undefined, { minimumFractionDigits: 2, maximumFractionDigits: 3 }) +"</div></div>" ;
+                        return "<div class='row'><div class='col-6 text-end'>" + value.toLocaleString(undefined, { minimumFractionDigits: 2, maximumFractionDigits: 3 }) + "</div></div>";
                     } else {
-                        return "<div class='row'><div class='col-6 text-end'>" + value.toLocaleString(undefined, { minimumFractionDigits: 3, maximumFractionDigits: 3 }) +"</div></div>" ;
+                        return "<div class='row'><div class='col-6 text-end'>" + value.toLocaleString(undefined, { minimumFractionDigits: 3, maximumFractionDigits: 3 }) + "</div></div>";
                     }
 
                 } else {
 
-                    return "<div class='row'><div class='col-6 text-end'>" + value.toLocaleString(undefined, { minimumFractionDigits: 2, maximumFractionDigits: 2 }) +"</div></div>" ;
+                    return "<div class='row'><div class='col-6 text-end'>" + value.toLocaleString(undefined, { minimumFractionDigits: 2, maximumFractionDigits: 2 }) + "</div></div>";
                 }
             }
+            
         }
         function perToptan(value, index, row) {
             var d = sondurum.filter(x => x.FIYATKODU == index.FIYATKODU);
-            if (d[0].FIYAT3 == "YÜKSELDİ") {
-                if (index.FIYATDOVIZTIPI != "TRY") {
-                    if (value > 2) {
-                        return "<div class='row'><div class='col-6 text-end'>" + value.toLocaleString(undefined, { minimumFractionDigits: 2, maximumFractionDigits: 3 }) + "</div><div class='col-6 text-start'><i class='bx bxs-up-arrow' style='color:#00ee00'></i></div></div>";
+            if (d.length>0) {
+                if (d[0].FIYAT3 == "YÜKSELDİ") {
+                    if (index.FIYATDOVIZTIPI != "TRY") {
+                        if (value > 2) {
+                            return "<div class='row'><div class='col-6 text-end'>" + value.toLocaleString(undefined, { minimumFractionDigits: 2, maximumFractionDigits: 3 }) + "</div><div class='col-6 text-start'><i class='bx bxs-up-arrow' style='color:#00ee00'></i></div></div>";
+                        } else {
+                            return "<div class='row'><div class='col-6 text-end'>" + value.toLocaleString(undefined, { minimumFractionDigits: 3, maximumFractionDigits: 3 }) + "</div><div class='col-6 text-start'><i class='bx bxs-up-arrow' style='color:#00ee00'></i></div></div>";
+                        }
+
                     } else {
-                        return "<div class='row'><div class='col-6 text-end'>" + value.toLocaleString(undefined, { minimumFractionDigits: 3, maximumFractionDigits: 3 }) + "</div><div class='col-6 text-start'><i class='bx bxs-up-arrow' style='color:#00ee00'></i></div></div>";
+
+                        return "<div class='row'><div class='col-6 text-end'>" + value.toLocaleString(undefined, { minimumFractionDigits: 2, maximumFractionDigits: 2 }) + "</div><div class='col-6 text-start'><i class='bx bxs-up-arrow' style='color:#00ee00'></i></div></div>";
                     }
-
-                } else {
-
-                    return "<div class='row'><div class='col-6 text-end'>" + value.toLocaleString(undefined, { minimumFractionDigits: 2, maximumFractionDigits: 2 }) + "</div><div class='col-6 text-start'><i class='bx bxs-up-arrow' style='color:#00ee00'></i></div></div>";
                 }
-            } else if (d[0].FIYAT2 == "DÜŞTÜ") {
-                if (index.FIYATDOVIZTIPI != "TRY") {
-                    if (value > 2) {
-                        return "<div class='row'><div class='col-6 text-end'>" + value.toLocaleString(undefined, { minimumFractionDigits: 2, maximumFractionDigits: 3 }) + "</div><div class='col-6 text-start'><i class='bx bxs-down-arrow' style='color:#ff0200'></i></div></div>";
+                else if (d[0].FIYAT2 == "DÜŞTÜ") {
+                    if (index.FIYATDOVIZTIPI != "TRY") {
+                        if (value > 2) {
+                            return "<div class='row'><div class='col-6 text-end'>" + value.toLocaleString(undefined, { minimumFractionDigits: 2, maximumFractionDigits: 3 }) + "</div><div class='col-6 text-start'><i class='bx bxs-down-arrow' style='color:#ff0200'></i></div></div>";
+                        } else {
+                            return "<div class='row'><div class='col-6 text-end'>" + value.toLocaleString(undefined, { minimumFractionDigits: 3, maximumFractionDigits: 3 }) + "</div><div class='col-6 text-start'><i class='bx bxs-down-arrow' style='color:#ff0200'></i></div></div>";
+                        }
+
                     } else {
-                        return "<div class='row'><div class='col-6 text-end'>" + value.toLocaleString(undefined, { minimumFractionDigits: 3, maximumFractionDigits: 3 }) + "</div><div class='col-6 text-start'><i class='bx bxs-down-arrow' style='color:#ff0200'></i></div></div>";
+
+                        return "<div class='row'><div class='col-6 text-end'>" + value.toLocaleString(undefined, { minimumFractionDigits: 2, maximumFractionDigits: 2 }) + "</div><div class='col-6 text-start'><i class='bx bxs-down-arrow' style='color:#ff0200'></i></div></div>";
                     }
-
-                } else {
-
-                    return "<div class='row'><div class='col-6 text-end'>" + value.toLocaleString(undefined, { minimumFractionDigits: 2, maximumFractionDigits: 2 }) + "</div><div class='col-6 text-start'><i class='bx bxs-down-arrow' style='color:#ff0200'></i></div></div>";
                 }
-            } else {
+                else {
+                    if (index.FIYATDOVIZTIPI != "TRY") {
+                        if (value > 2) {
+                            return "<div class='row'><div class='col-6 text-end'>" + value.toLocaleString(undefined, { minimumFractionDigits: 2, maximumFractionDigits: 3 }) + "</div></div>";
+                        } else {
+                            return "<div class='row'><div class='col-6 text-end'>" + value.toLocaleString(undefined, { minimumFractionDigits: 3, maximumFractionDigits: 3 }) + "</div></div>";
+                        }
+
+                    } else {
+
+                        return "<div class='row'><div class='col-6 text-end'>" + value.toLocaleString(undefined, { minimumFractionDigits: 2, maximumFractionDigits: 2 }) + "</div></div>";
+                    }
+                }
+            }
+            else {
                 if (index.FIYATDOVIZTIPI != "TRY") {
                     if (value > 2) {
                         return "<div class='row'><div class='col-6 text-end'>" + value.toLocaleString(undefined, { minimumFractionDigits: 2, maximumFractionDigits: 3 }) + "</div></div>";
