--- a/NOVA/Views/Satis/FiyatYonetimi.cshtml
+++ b/NOVA/Views/Satis/FiyatYonetimi.cshtml
@@ -69,6 +69,10 @@
         .mobil-btn {
             display: block;
         }
+        .search{
+            float:left !important;
+            width:50%;
+        }
     }
 
     @@media screen and (min-width: 601px) {
@@ -96,6 +100,13 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col">
+                <div class="layout-menu-toggle navbar-nav align-items-xl-center me-3 me-xl-0 d-xl-none">
+                    <a class="nav-item nav-link px-0 me-xl-4" href="javascript:void(0)">
+                        <i class="bx bx-menu bx-sm"></i>
+                    </a>
+                </div>
+            </div>
+            <div class="col">
                 <div class="avatar avatar-online float-end mb-0" data-bs-toggle="dropdown">
                     @{
                         string s = Request.Cookies["Id"].Value + ".png?" + DateTime.Now.Ticks.ToString();
@@ -116,7 +127,7 @@
                                     </div>
                                 </div>
                                 <div class="flex-grow-1">
-                                    @if (@Request.Cookies["Name"] != null)
+                                    @if (Request.Cookies["Name"] != null)
                                     {
                                         <span class="fw-semibold d-block">@Request.Cookies["Name"].Value</span>
                                         <small class="text-muted">Yetki: @Request.Cookies["RoleName"].Value</small>
@@ -150,32 +161,32 @@
                 <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
                 <label class="btn btn-outline-secondary" for="btnradio3">ÖZEL</label>
             </div>*@
-        <div id="employeeTableWrapper" class="tableWrapper">
-            <div id="toolbar">
-                <div class="row">
-                    <div class="col">
-                        <div class="class=form-check form-switch text-center">
-                            <input class="form-check-input" type="checkbox" onchange="switchchange()" id="flexSwitchCheckChecked" unchecked="">
-                        </div>
-                        <div class="row">
-                            <label style="font-size: 10px; letter-spacing:1px">PRK-TPT</label>
-                        </div>
+    <div id="employeeTableWrapper" class="tableWrapper">
+        <div id="toolbar">
+            <div class="row">
+                <div class="col">
+                    <div class="class=form-check form-switch text-center">
+                        <input class="form-check-input" type="checkbox" onchange="switchchange()" id="flexSwitchCheckChecked" unchecked="">
                     </div>
-                    <div class="col" id="siralama">
-                        <div class="class=form-check form-switch text-center">
-                            <input class="form-check-input" type="checkbox" onchange="sirala()" id="flexSwitchCheckChecked1" unchecked="">
-                        </div>
-                        <div class="row">
-                            <label style="font-size: 10px; letter-spacing:1px">SIRALAMA</label>
-                        </div>
+                    <div class="row">
+                        <label style="font-size: 10px; letter-spacing:1px">PRK-TPT</label>
                     </div>
-                    @*<div class="col">
-                            <button class="btn btn-secondary" onclick="location.href='@Url.Action("MailFiyatlist", "Satis")'" type="button"><i class='bx bx-mail-send'></i></button>
-                        </div>*@
                 </div>
-
+                <div class="col" id="siralama">
+                    <div class="class=form-check form-switch text-center">
+                        <input class="form-check-input" type="checkbox" onchange="sirala()" id="flexSwitchCheckChecked1" unchecked="">
+                    </div>
+                    <div class="row">
+                        <label style="font-size: 10px; letter-spacing:1px">SIRALAMA</label>
+                    </div>
+                </div>
+                @*<div class="col">
+                    <button class="btn btn-secondary" onclick="location.href='@Url.Action("MailFiyatlist", "Satis")'" type="button"><i class='bx bx-mail-send'></i></button>
+                </div>*@
             </div>
 
+        </div>
+        <div id="toolbar" class="mt-2 w-100"></div>
             <table id="table"
                    class="table table-striped"
                    data-show-fullscreen="true"
