--- a/NOVA/Views/Shared/_Layout_ZiyaretPlanlari.cshtml
+++ b/NOVA/Views/Shared/_Layout_ZiyaretPlanlari.cshtml
@@ -583,7 +583,21 @@
 
                             <!-- User -->
                             <li class="nav-item navbar-dropdown dropdown-user dropdown">
-                                <a class="nav-link dropdown-toggle hide-arrow" href="javascript:void(0);" data-bs-toggle="dropdown">
+                                <script>
+                                    var sabit = 0;
+                                    function sh() {
+                                        if (sabit == 0) {
+                                            sabit = 1
+                                            document.getElementsByClassName("dropdown-menu")[0].className = "dropdown-menu dropdown-menu-end show";
+                                            document.getElementsByClassName("dropdown-menu")[0].style = "position: absolute; inset: 0px 0px auto auto; margin: 0px; transform: translate(-24px, 64px);"
+                                        } else {
+                                            document.getElementsByClassName("dropdown-menu")[0].className = "dropdown-menu dropdown-menu-end";
+                                            sabit = 0;
+                                        }
+                                        
+                                    }
+                                </script>
+                                <a class="nav-link dropdown-toggle hide-arrow" style="cursor:pointer" onclick="sh()" data-bs-toggle="dropdown">
                                     <div class="avatar avatar-online">
                                         <object data="/assets/img/avatars/@s" type="image/png" class="w-px-40 h-auto rounded-circle">
                                             <img src="/assets/img/avatars/7.png" class="w-px-40 h-auto ">
